<resources>
    <string name="app_name">whatsai recorder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_audio_recorder">Whatsai Recorder</string>
    <string name="action_listening">Whatsai Listener</string>
    <string name="action_recording">Whatsai Audio Recorder</string>
    <string name="action_template">Whatsai Audio Template</string>
    <string name="action_save_wave">Save Wave File</string>
    <string name="action_cloud_save">Cloud Save</string>
    <string name="action_app_minimize">Go Background</string>
    <string name="action_app_exit">Exit App</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="text_listener">Listener</string>
    <string name="text_recorder">Recorder</string>
</resources>
