<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cloud_save"
        android:orderInCategory="100"
        android:title="@string/action_cloud_save"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_recorder"
        android:orderInCategory="100"
        android:title="@string/text_recorder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listener"
        android:orderInCategory="100"
        android:title="@string/text_listener"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_minimize"
        android:orderInCategory="100"
        android:title="@string/action_app_minimize"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_app_exit"
        android:orderInCategory="100"
        android:title="@string/action_app_exit"
        app:showAsAction="never" />
</menu>
